--- a/index.html
+++ b/index.html
@@ -34,16 +34,30 @@ Anna Baker
 <LI>Developed and led training for Peace Corps Costa Rica Diversity Committee</LI>
 <LI>Participated as team member to develop and implement multiple workshops on program design and management</LI>
 </UL>
-<H4>Rural Community Development Facilitator, US Peace Corps</H4>
+<H4>Rural Community Development Specialist, US Peace Corps</H4>
 <UL>
 <LI>Successfully organized community to initiate trash collection and recycling</LI>
 <LI>Led campaign to certify Rio Celeste in Costa Rica’s national eco-certification program, Bandera Azul</LI>
 <LI>Secured grant funding, developed and managed biogas digester project for local school and community households</LI>
 <LI>Prepared and hosted Technical Training Week for Peace Corps trainees</LI>
-
 </UL>
-<H4>Program Coordinator, School for International Training</H4>
+<H4>Field Manager, Fund for the Public Interest</H4>
+<UL>
+  <LI>Managed team of 10-12 field canvassers</LI>
+  <LI>Informed, advocated and raised funds for environmental initiatives</LI>
+  <LI>Met or exceeded all daily fund raising quotas</LI>
+  <LI>Coordinated and trained incoming employees in fundraising</LI>
+</UL>
+
 <P>Education</P>
+<H4>2012 M.A. Sustainable Development, School for International Training, Brattleboro, VT</H4>
+<H3>Brattleboro, VT. Concentrations: Community Development and Social Action</H3>
+<H3>Courses: Policy Advocacy, Theory and Practice of Sustainable Development, </H3>
+<H3>Economics, Training and Design for Experiential Learning, Training for Social Action,</H3> 
+<H3>Intercultural Communication, Leadership and Coalition Building</H3>
+
+<H4>2008 B.A. International Relations, Augsburg College, Minneapolis MN</H4>
+<H3>Minors: Peace & Global Studies, Spanish</H3>
 <p>Additional</p>
 </DIV>
 
