--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@ Anna Baker
 </UL>
 
 <P>Education</P>
-<H4>2012 M.A. Sustainable Development, School for International Training, Brattleboro, VT</H4>
-<H3>Brattleboro, VT. Concentrations: Community Development and Social Action</H3>
-<H3>Courses: Policy Advocacy, Theory and Practice of Sustainable Development, </H3>
-<H3>Economics, Training and Design for Experiential Learning, Training for Social Action,</H3> 
-<H3>Intercultural Communication, Leadership and Coalition Building</H3>
+<P3>2012 M.A. Sustainable Development, School for International Training, Brattleboro, VT</P3>
+<P3>Brattleboro, VT. Concentrations: Community Development and Social Action</P3>
+<P3>Courses: Policy Advocacy, Theory and Practice of Sustainable Development, </P3>
+<P3>Economics, Training and Design for Experiential Learning, Training for Social Action,</P3> 
+<P3>Intercultural Communication, Leadership and Coalition Building</P3>
 
 <H4>2008 B.A. International Relations, Augsburg College, Minneapolis MN</H4>
 <H3>Minors: Peace & Global Studies, Spanish</H3>
