--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@ Anna Baker
 
 <P>Education</P>
 <P3>2012 M.A. Sustainable Development, School for International Training, Brattleboro, VT</P3>
-<P3>Brattleboro, VT. Concentrations: Community Development and Social Action</P3>
-<P3>Courses: Policy Advocacy, Theory and Practice of Sustainable Development, </P3>
-<P3>Economics, Training and Design for Experiential Learning, Training for Social Action,</P3> 
-<P3>Intercultural Communication, Leadership and Coalition Building</P3>
+<P4>Brattleboro, VT. Concentrations: Community Development and Social Action</P4>
+<P4>Courses: Policy Advocacy, Theory and Practice of Sustainable Development, </P4>
+<P4>Economics, Training and Design for Experiential Learning, Training for Social Action,</P4> 
+<P4>Intercultural Communication, Leadership and Coalition Building</P4>
 
-<H4>2008 B.A. International Relations, Augsburg College, Minneapolis MN</H4>
-<H3>Minors: Peace & Global Studies, Spanish</H3>
+<P3>2008 B.A. International Relations, Augsburg College, Minneapolis MN</P3>
+<P4>Minors: Peace & Global Studies, Spanish</P4>
 <p>Additional</p>
 </DIV>
 
