--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@ Anna Baker
 </UL>
 
 <P>Education</P>
-<P3>2012 M.A. Sustainable Development, School for International Training, Brattleboro, VT</P3>
+<H4>2012 M.A. Sustainable Development, School for International Training, Brattleboro, VT</H4>
 <P4>Brattleboro, VT. Concentrations: Community Development and Social Action</P4>
 <P4>Courses: Policy Advocacy, Theory and Practice of Sustainable Development, </P4>
 <P4>Economics, Training and Design for Experiential Learning, Training for Social Action,</P4> 
 <P4>Intercultural Communication, Leadership and Coalition Building</P4>
 
-<P3>2008 B.A. International Relations, Augsburg College, Minneapolis MN</P3>
+<H4>2008 B.A. International Relations, Augsburg College, Minneapolis MN</H4>
 <P4>Minors: Peace & Global Studies, Spanish</P4>
 <p>Additional</p>
 </DIV>
