--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Anna Baker
 
 <P>Education</P>
 <H4>2012 M.A. Sustainable Development, School for International Training, Brattleboro, VT</H4>
-<P4>Brattleboro, VT. Concentrations: Community Development and Social Action</P4>
+<H5>Brattleboro, VT. Concentrations: Community Development and Social Action</H5>
 <P4>Courses: Policy Advocacy, Theory and Practice of Sustainable Development, </P4>
 <P4>Economics, Training and Design for Experiential Learning, Training for Social Action,</P4> 
 <P4>Intercultural Communication, Leadership and Coalition Building</P4>
