--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@ Anna Baker
 <P>Education</P>
 <H4>2012 M.A. Sustainable Development, School for International Training, Brattleboro, VT</H4>
 <H5>Brattleboro, VT. Concentrations: Community Development and Social Action</H5>
-<P4>Courses: Policy Advocacy, Theory and Practice of Sustainable Development, </P4>
-<P4>Economics, Training and Design for Experiential Learning, Training for Social Action,</P4> 
-<P4>Intercultural Communication, Leadership and Coalition Building</P4>
+<H5>Courses: Policy Advocacy, Theory and Practice of Sustainable Development, </H5>
+<H5>Economics, Training and Design for Experiential Learning, Training for Social Action,</H5> 
+<H5>Intercultural Communication, Leadership and Coalition Building</H5>
 
 <H4>2008 B.A. International Relations, Augsburg College, Minneapolis MN</H4>
 <P4>Minors: Peace & Global Studies, Spanish</P4>
