--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@ Anna Baker
 <BODY>
 <H1> Anna Katherine Rodenborg Baker, MA </H1>
 <hr noshade>
-<P1> annakatherinebaker@gmail.com </P1>
-<P2> 763.302.9886</P2>
+
 <P> Career Profile: </P>
 
 <P>Experience</P>
@@ -51,7 +50,7 @@ Anna Baker
 
 <P>Education</P>
 <H4>2012 M.A. Sustainable Development, School for International Training, Brattleboro, VT</H4>
-<P4>Brattleboro, VT. Concentrations: Community Development and Social Action</P4>
+<Brattleboro, VT. Concentrations: Community Development and Social Action
 <P4>Courses: Policy Advocacy, Theory and Practice of Sustainable Development, </P4>
 <P4>Economics, Training and Design for Experiential Learning, Training for Social Action,</P4> 
 <P4>Intercultural Communication, Leadership and Coalition Building</P4>
