--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ Anna Baker
 <hr noshade>
 
 <P> Career Profile: </P>
+<H4>Experienced and motivated professional seeking to expand upon a career in health advocacy as Family Planning and Sexual Health Educator with Hennepin County</H4>
 
 <P>Experience</P>
 <h4>Bilingual CA/MNsure Navigator, Planned Parenthood</h4>
