--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@ Anna Baker
 <hr noshade>
 
 <P> Career Profile: </P>
-<H4>Experienced and motivated professional seeking to expand upon a career in health advocacy as Family Planning and Sexual Health Educator with Hennepin County</H4>
+<H4>Experienced and motivated professional seeking to develop career in programming</H4>
+<H4></H4>as student with Prime Digital Academy</H4>
+
 
 <P>Experience</P>
 <h4>Bilingual CA/MNsure Navigator, Planned Parenthood</h4>
