--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Anna Baker
 
 <P> Career Profile: </P>
 <H4>Experienced and motivated professional seeking to develop career in programming</H4>
-<H4></H4>as student with Prime Digital Academy</H4>
+<H4>as student with Prime Digital Academy</H4>
 
 
 <P>Experience</P>
