--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ Anna Baker
 <BODY>
 <H1> Anna Katherine Rodenborg Baker, MA </H1>
 <hr noshade>
-<H6>annakatherinebaker@gmail.com 763.302.9886</H6>
+<H6>annakatherinebaker@gmail.com <div>763.302.9886</div></H6>
 
 <P> Career Profile: </P>
 <H4>Experienced and motivated professional seeking to develop career in programming</H4>
