--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <HTML>
-<HEAD> <DIV CLASS="CONTAINER"> <link rel="stylesheet" type="text/css" href="style.css"> 
+<HEAD>  <link rel="stylesheet" type="text/css" href="style.css"> 
 <TITLE>
 Anna Baker
 </TITLE>
@@ -51,6 +51,12 @@ Anna Baker
   <LI>Met or exceeded all daily fund raising quotas</LI>
   <LI>Coordinated and trained incoming employees in fundraising</LI>
 </UL>
+<H4>English as a Second Language (ESL) Teacher, World Teach China, Summer 2007</H4>
+<UL>
+  <LI>Developed curriculum, designed lesson plans and taught English to youth in Hunan Province, China</LI>
+  <LI>Managed a class of 30 – 40 middle school students</LI>
+  <LI>Engaged students by utilizing experiential learning techniques</LI>
+</UL>
 
 <P>Education</P>
 <H4>2012 M.A. Sustainable Development, School for International Training, Brattleboro, VT</H4>
@@ -61,7 +67,28 @@ Anna Baker
 
 <H4>2008 B.A. International Relations, Augsburg College, Minneapolis MN</H4>
 <P4>Minors: Peace & Global Studies, Spanish</P4>
+
+
+<P>INTERNATIONAL EDUCATION</P>
+<H3>The courses below were taken through the Augsburg College Center for Global Education</H3>
+<UL>
+  <LI>Social Justice, Gender and the Environment in Latin America. Semester Abroad in Mexico and Guatemala. Spring 2007</LI>
+  <LI>Sustainable Development in Central America. Semester Abroad in Guatemala, El Salvador, Honduras and Nicaragua. Fall 2005</LI>
+  <LI>Struggle Against Colonialism, Segregation & Apartheid. Short-term Study Abroad in Namibia and South Africa. May 2005</LI>
+</UL>
+
+<P>OTHER SERVICE</P>
+<H4>Education Committee Member, MN International NGO Network, Mpls, MN June 2013-present</H4>
+<P4>Speakers Committee Lead for the 2014 International Development Exchange and Action Summit, October, 2014.</P4>
+
+<H4>Board Member and Vice President, MN Returned Peace Corps Volunteers, Mpls, MN 2013-present</H4>
+<UL>
+  <LI>Vice President (2014-present)</LI>
+  <LI>Editor of quarterly newsletter, MNRPCV News.http://www.mnrpcv.org/newsletters/newsletters/</LI>
+</UL>
+
 <p>Additional</p>
+
 </DIV>
 
 
