--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ Anna Baker
 <BODY>
 <H1> Anna Katherine Rodenborg Baker, MA </H1>
 <hr noshade>
-<IMG SRC="homepage.gif" ALT="some text" WIDTH=32 HEIGHT=32>
+<IMG SRC="097cd97.jpg" ALT="some text" WIDTH=32 HEIGHT=32>
 <H6>annakatherinebaker@gmail.com</H6> <H6><div>763.302.9886</div></H6>
 
 <P> Career Profile: </P>
