--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ Anna Baker
 <BODY>
 <H1> Anna Katherine Rodenborg Baker, MA </H1>
 <hr noshade>
-<IMG SRC= "<img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/8/005/067/0e7/097cd97.jpg" width="200" height="200" alt="Anna Baker"> ALT="some text" WIDTH=50 HEIGHT=50>
+<img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/8/005/067/0e7/097cd97.jpg" width="200" height="200" alt="Anna Baker">
 <H6>annakatherinebaker@gmail.com</H6> <H6><div>763.302.9886</div></H6>
 
 <P> Career Profile: </P>
