--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@ Anna Baker
 </TITLE>
 </HEAD>
 <BODY>
-<H1> Anna Katherine Rodenborg Baker, MA </H1>
+<H1> Anna Katherine Rodenborg Baker, MA </H1> <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/8/005/067/0e7/097cd97.jpg" width="100" height="100" alt="Anna Baker">
+
 <hr noshade>
-<img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/8/005/067/0e7/097cd97.jpg" width="200" height="200" alt="Anna Baker">
-<H6>annakatherinebaker@gmail.com</H6> <H6><div>763.302.9886</div></H6>
+<H6>annakatherinebaker@gmail.com 763.302.9886</H6>
 
 <P> Career Profile: </P>
 <H4>Experienced and motivated professional seeking to develop career in programming</H4>
