--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ Anna Baker
 </TITLE>
 </HEAD>
 <BODY>
-<H1> Anna Katherine Rodenborg Baker, MA </H1> <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/8/005/067/0e7/097cd97.jpg" width="100" height="100" alt="Anna Baker">
+<H1> <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/8/005/067/0e7/097cd97.jpg" width="150" height="150" alt="Anna Baker">
+Anna Katherine Rodenborg Baker, MA </H1> 
 
-<hr noshade>
 <H6>annakatherinebaker@gmail.com 763.302.9886</H6>
 
 <P> Career Profile: </P>
