--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@ Anna Baker
 </TITLE>
 </HEAD>
 <BODY>
+  <div class="header-container">
+    <div class="txt-container">
+        <p>Some text here</p>
+    </div>
+</div>
 <H1> <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/8/005/067/0e7/097cd97.jpg" width="150" height="150" alt="Anna Baker">
 Anna Katherine Rodenborg Baker, MA </H1> 
 
