--- a/index.html
+++ b/index.html
@@ -5,15 +5,10 @@ Anna Baker
 </TITLE>
 </HEAD>
 <BODY>
-  <div class="header-container">
-    <div class="txt-container">
-        <p>Some text here</p>
-    </div>
-</div>
-<H1> <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/8/005/067/0e7/097cd97.jpg" width="150" height="150" alt="Anna Baker">
+<H1> 
 Anna Katherine Rodenborg Baker, MA </H1> 
-
-<H6>annakatherinebaker@gmail.com 763.302.9886</H6>
+<H6>annakatherinebaker@gmail.com</H6>
+  <H6>763.302.9886</H6>
 
 <P> Career Profile: </P>
 <H4>Experienced and motivated professional seeking to develop career in programming</H4>
