--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ Anna Katherine Rodenborg Baker, MA </H1>
   <H6>763.302.9886</H6>
 
 <P> Career Profile: </P>
-<H4>Experienced and motivated professional seeking to develop career in programming</H4>
-<H4>as student with Prime Digital Academy</H4>
+<H5>Experienced and motivated professional seeking to develop career in programming</H5>
+<H5>as student with Prime Digital Academy</H5>
 
 
 <P>Experience</P>
@@ -70,7 +70,7 @@ Anna Katherine Rodenborg Baker, MA </H1>
 <P4>Minors: Peace & Global Studies, Spanish</P4>
 
 
-<P>INTERNATIONAL EDUCATION</P>
+<P>International Education</P>
 <H3>The courses below were taken through the Augsburg College Center for Global Education</H3>
 <UL>
   <LI>Social Justice, Gender and the Environment in Latin America. Semester Abroad in Mexico and Guatemala. Spring 2007</LI>
@@ -78,7 +78,7 @@ Anna Katherine Rodenborg Baker, MA </H1>
   <LI>Struggle Against Colonialism, Segregation & Apartheid. Short-term Study Abroad in Namibia and South Africa. May 2005</LI>
 </UL>
 
-<P>OTHER SERVICE</P>
+<P>Other Service</P>
 <H4>Education Committee Member, MN International NGO Network, Mpls, MN June 2013-present</H4>
 <P4>Speakers Committee Lead for the 2014 International Development Exchange and Action Summit, October, 2014.</P4>
 
