--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ Anna Katherine Rodenborg Baker, MA </H1>
   <H6>763.302.9886</H6>
 
 <P> Career Profile: </P>
-<H5>Experienced and motivated professional seeking to develop career in programming</H5>
-<H5>as student with Prime Digital Academy</H5>
+<P3Experienced and motivated professional seeking to develop career in programming</P3>
+<P3>as student with Prime Digital Academy</P3>
 
 
 <P>Experience</P>
