--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@ Anna Baker
 </HEAD>
 <BODY>
 <H1> 
-Anna Katherine Rodenborg Baker, MA </H1> 
-
-<P> Career Profile: </P>
+Anna Katherine Rodenborg Baker, MA 
+</H1> 
+<P> 
+Career Profile: </P>
 
 <P>Experience</P>
 <h4>Bilingual CA/MNsure Navigator, Planned Parenthood</h4>
