--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@ Anna Baker
 </TITLE>
 </HEAD>
 <BODY>
-<H1> 
+<div id="header">
+  <H1> 
 Anna Katherine Rodenborg Baker, MA 
 </H1> 
+</div>
 <P> 
 Career Profile: </P>
 
