--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@ Anna Baker
 Anna Katherine Rodenborg Baker, MA 
 </H1> 
 </div>
+<div id="CareerProfile">
 <P> 
 Career Profile: </P>
-
+</div>
+<div id="Content">
 <P>Experience</P>
 <h4>Bilingual CA/MNsure Navigator, Planned Parenthood</h4>
 <UL>
