--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 Anna Baker
 </TITLE>
 </HEAD>
+<div id="body">
 <BODY>
 <div id="header">
   <H1> 
@@ -89,8 +90,9 @@ Career Profile: </P>
 </UL>
 
 <p>Additional</p>
+</div>
+</div>
 
-</DIV>
 
 
 
