--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Anna Baker
 <div id="body">
 <div id="header">
 <H1> 
-Anna Katherine Rodenborg Baker, MA 
+Anna Katherine Rodenborg Baker, MA <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/8/005/067/0e7/097cd97.jpg" width="200" height="200" alt="Anna Baker">
 </H1> 
 </div>
 <div id="CareerProfile">
