--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@ Anna Baker
 <BODY>
 <div id="body">
 <div id="header">
-<H1> 
-Anna Katherine Rodenborg Baker, MA <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/8/005/067/0e7/097cd97.jpg" width="200" height="200" alt="Anna Baker">
-    
+<div id="name"<H1> 
+Anna Katherine Rodenborg Baker, MA </div> 
+<img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/8/005/067/0e7/097cd97.jpg" width="200" height="200" alt="Anna Baker">
+<img style =float: right;"    
 </H1> 
 </div>
 <div id="CareerProfile">
