--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@ Anna Baker
 <div id="header">
 <div id="name"<H1> 
 Anna Katherine Rodenborg Baker, MA </div> 
-<img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/8/005/067/0e7/097cd97.jpg" width="200" height="200" alt="Anna Baker">
-    
-</H1> 
+</H1> </div>
 </div>
 <div id="CareerProfile">
 <P> 
