--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Anna Baker
 <div id="body">
 <div id="header">
 <div id="name"<H1> 
-Anna Katherine Rodenborg Baker, MA </div> 
+Anna Katherine Rodenborg Baker, MA  
 </H1> </div>
 </div>
 <div id="CareerProfile">
