--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@ Anna Baker
 <BODY>
 <div id="body">
 <div id="header">
-<div id="name"<H1> 
+<div id="name">
+<H1> 
 Anna Katherine Rodenborg Baker, MA  
 </H1> </div>
 </div>
 <div id="CareerProfile">
 <P> 
-Career Profile: </P>
+Career Profile: 
+</P>
+<P>Self driven, goal oriented professional whose life mission is to connect communities with the resources they need to develop.  </P>
 </div>
 <div id="Content">
 <P>Experience</P>
