--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@ Anna Katherine Rodenborg Baker, MA
 <P> 
 Career Profile: 
 </P>
-<P>Self driven, goal oriented professional whose life mission is to connect communities with the resources they need to develop.  </P>
+<P1>Self driven, goal oriented professional whose life mission is to connect communities with the </P1>
+<P1>resources they need to develop.  </P1>
 </div>
 <div id="Content">
 <P>Experience</P>
