--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ Anna Katherine Rodenborg Baker, MA
 <P1>resources they need to develop.  </P1>
 </div>
 <div id="body">
+  <div class="transbox">
 <div id="Content">
 <P>Experience</P>
 <h4>Bilingual CA/MNsure Navigator, Planned Parenthood</h4>
@@ -95,6 +96,7 @@ Anna Katherine Rodenborg Baker, MA
   <LI>Editor of quarterly newsletter, MNRPCV News.http://www.mnrpcv.org/newsletters/newsletters/</LI>
 </UL>
 <p>Additional</p>
+</div>
 </div>
 </div>
 
