--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Anna Katherine Rodenborg Baker, MA
 <P4>Speakers Committee Lead for the 2014 International Development Exchange and Action Summit, October, 2014.</P4>
 
 <H4>Board Member and Vice President, MN Returned Peace Corps Volunteers, Mpls, MN </H4>
-<H4></H4>2013-present</H4>
+<H4>2013-present</H4>
 <UL>
   <LI>Vice President (2014-present)</LI>
   <LI>Editor of quarterly newsletter, MNRPCV News.http://www.mnrpcv.org/newsletters/newsletters/</LI>
