--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Anna Katherine Rodenborg Baker, MA
 <P1>resources they need to develop.  </P1>
 </div>
 <div id="body">
-  
+  <span style="font-size:32pt" onmouseover="this.style.fontSize='36pt'" onmouseout="this.style.fontSize='32pt'">Hi There</span>
 <div id="Content">
 <P>Experience</P>
 <h4>Bilingual CA/MNsure Navigator, Planned Parenthood</h4>
