--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@ Anna Baker
 <div id="name">
 <H1> 
 Anna Katherine Rodenborg Baker, MA  
-</H1> </div>
+</H1>
+<H2>763.302.9886</H2>
+
+</div>
 </div>
 <div id="CareerProfile">
 
@@ -21,7 +24,6 @@ Anna Katherine Rodenborg Baker, MA
 <P1>resources they need to develop.  </P1>
 </div>
 <div id="body">
-  <span style="font-size:32pt" onmouseover="this.style.fontSize='36pt'" onmouseout="this.style.fontSize='32pt'">Hi There</span>
 <div id="Content">
 <P>Experience</P>
 <h4>Bilingual CA/MNsure Navigator, Planned Parenthood</h4>
