--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Anna Baker
 Anna Katherine Rodenborg Baker, MA  
 </H1>
 <H2>763.302.9886</H2>
-<img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/8/005/067/0e7/097cd97.jpg" width="150" height="150" alt="Anna Baker">
+<img src="https://lh3.googleusercontent.com/-p7L6p-FE12E/UHMianjz35I/AAAAAAAAAHg/Jz9Epma2Djo/w140-h139-p/Photo%2B596.jpg>
 </div>
 </div>
 <div id="CareerProfile">
