--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ Anna Baker
 Anna Katherine Rodenborg Baker, MA  
 </H1>
 <H2>763.302.9886</H2>
-<img src="https://lh3.googleusercontent.com/-p7L6p-FE12E/UHMianjz35I/AAAAAAAAAHg/Jz9Epma2Djo/w140-h139-p/Photo%2B596.jpg>
+<img src="https://lh3.googleusercontent.com/_p3nzG5Mhmr0qTtJ6-DNz8CuNDcK3gZIF2N550BNxbMDHIIFzrN_UUvGQrxk1gF3EurP3g=s86" alt="Mountain View" style="width:304px;height:228px;">
+
 </div>
 </div>
 <div id="CareerProfile">
