--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@ Anna Baker
 <div id="header">
 <div id="name">
 <H1> 
-Anna Katherine Rodenborg Baker, MA  <img src="https://lh3.googleusercontent.com/_p3nzG5Mhmr0qTtJ6-DNz8CuNDcK3gZIF2N550BNxbMDHIIFzrN_UUvGQrxk1gF3EurP3g=s86" alt="Mountain View" style="width:100px;height:100px;">
-
+Anna Katherine Rodenborg Baker, MA  
 </H1>
+<H2>annakatherinebaker@gmail.com</H2>
 <H2>763.302.9886</H2>
+
 
 </div>
 </div>
