--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Anna Katherine Rodenborg Baker, MA
 <P> 
   Career Profile: 
   </P>
-<P1>Self driven, goal oriented professional whose life mission is to connect communities with the </P1>
+<P1>Self driven, goal oriented professional dedicated to connecting communities with the </P1>
 <P1>resources they need to develop.  </P1>
 </div>
 <div id="body">
