--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Anna Katherine Rodenborg Baker, MA
 </div>
 </div>
 <div id="CareerProfile">
-
+<div class="transbox">
 <P> 
   Career Profile: 
   </P>
@@ -101,6 +101,7 @@ Anna Katherine Rodenborg Baker, MA
   <LI>Editor of quarterly newsletter, MNRPCV News.http://www.mnrpcv.org/newsletters/newsletters/</LI>
 </UL>
 <p>Additional</p>
+</div>
 </div>
 </div>
 
