--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@ Anna Katherine Rodenborg Baker, MA
 </UL>
 <H4>Interpreter, Multilingual Word</H4>
 <UL>
-<LI>Provide interpretive services in Spanish/English in medical, academic and community service contexts</LI>
-<LI>Assist in communicating about cultural differences</LI>
-<LI>Coordinate interpreters with client requests</LI></UL>
+<LI>Provided interpretive services in Spanish/English in medical, academic and community service contexts</LI>
+<LI>Assisted in communicating about cultural differences</LI>
+<LI>Coordinated interpreters with client requests</LI></UL>
 <H4>Peace Corps Volunteer Leader, US Peace Corps</H4>
 <UL>
 <LI>Supported and coordinated Rural Community Development program</LI>
@@ -100,7 +100,7 @@ Anna Katherine Rodenborg Baker, MA
   <LI>Vice President (2014-present)</LI>
   <LI>Editor of quarterly newsletter, MNRPCV News.http://www.mnrpcv.org/newsletters/newsletters/</LI>
 </UL>
-<p>Additional</p>
+
 </div>
 </div>
 </div>
