--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ Anna Katherine Rodenborg Baker, MA
   Career Profile: 
   </P>
 <P1>Self driven, goal oriented professional dedicated to connecting communities with the </P1>
-<P1>resources they need to develop.  </P1>
+<P1>resources they need to thrive now and in the future.  </P1>
 </div>
 <div id="body">
 <div id="Content">
