--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Anna Katherine Rodenborg Baker, MA
 <div id="body">
 <div id="Content">
 <P>Experience</P>
-<h4>Bilingual CA/MNsure Navigator, Planned Parenthood</h4>
+<h4>Bilingual CA/MNsure Navigator, Planned Parenthood 2014-present</h4>
 <UL>
 <LI>Coordinate MNsure enrollment at Minneapolis clinic</LI>
 <LI>Grew number of patients enrolled in healthcare by 15% in 2015 </LI>
@@ -36,12 +36,12 @@ Anna Katherine Rodenborg Baker, MA
 <LI>Assist in education and enrollment of clients</LI>
 <LI>Provide administrative services in clinic</LI>
 </UL>
-<H4>Interpreter, Multilingual Word</H4>
+<H4>Interpreter, Multilingual Word 2013-2014</H4>
 <UL>
 <LI>Provided interpretive services in Spanish/English in medical, academic and community service contexts</LI>
 <LI>Assisted in communicating about cultural differences</LI>
 <LI>Coordinated interpreters with client requests</LI></UL>
-<H4>Peace Corps Volunteer Leader, US Peace Corps</H4>
+<H4>Peace Corps Volunteer Leader, US Peace Corps 2013 </H4>
 <UL>
 <LI>Supported and coordinated Rural Community Development program</LI>
 <LI>Reviewed and edited Peace Corps volunteers’ grant proposals</LI>
@@ -50,14 +50,14 @@ Anna Katherine Rodenborg Baker, MA
 <LI>Developed and led training for Peace Corps Costa Rica Diversity Committee</LI>
 <LI>Participated as team member to develop and implement multiple workshops on program design and management</LI>
 </UL>
-<H4>Rural Community Development Specialist, US Peace Corps</H4>
+<H4>Rural Community Development Specialist, US Peace Corps 2010-2012</H4>
 <UL>
 <LI>Successfully organized community to initiate trash collection and recycling</LI>
 <LI>Led campaign to certify Rio Celeste in Costa Rica’s national eco-certification program, Bandera Azul</LI>
 <LI>Secured grant funding, developed and managed biogas digester project for local school and community households</LI>
 <LI>Prepared and hosted Technical Training Week for Peace Corps trainees</LI>
 </UL>
-<H4>Field Manager, Fund for the Public Interest</H4>
+<H4>Field Manager, Fund for the Public Interest 2008</H4>
 <UL>
   <LI>Managed team of 10-12 field canvassers</LI>
   <LI>Informed, advocated and raised funds for environmental initiatives</LI>
