--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Anna Katherine Rodenborg Baker, MA
 <LI>Assist in education and enrollment of clients</LI>
 <LI>Provide administrative services in clinic</LI>
 </UL>
-<H4>Interpreter, Multilingual Word 2013-2014</H4>
+<H4>Interpreter, Multilingual Word 2014</H4>
 <UL>
 <LI>Provided interpretive services in Spanish/English in medical, academic and community service contexts</LI>
 <LI>Assisted in communicating about cultural differences</LI>
