--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ Anna Katherine Rodenborg Baker, MA
 <H2>annakatherinebaker@gmail.com</H2>
 <H2>763.302.9886</H2>
 
-
+<img src = 097cd97.jpg>
 </div>
 </div>
 <div id="CareerProfile">
