--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ Anna Katherine Rodenborg Baker, MA
 <H2>annakatherinebaker@gmail.com</H2>
 <H2>763.302.9886</H2>
 
-<img src = "desktop/097cd97.jpg">
+
 </div>
 </div>
 <div id="CareerProfile">
@@ -24,6 +24,8 @@ Anna Katherine Rodenborg Baker, MA
   </P>
 <P1>Self-driven, goal-oriented professional dedicated to connecting communities with the </P1>
 <P1>resources they need to thrive now and in the future.  </P1>
+
+<img src = "desktop/097cd97.jpg" alt = "Anna Baker photo">
 </div>
 <div id="body">
 <div id="Content">
