--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Anna Katherine Rodenborg Baker, MA
 </H1>
 <H2>annakatherinebaker@gmail.com</H2>
 <H2>763.302.9886</H2>
-<img src = "097cd97.jpg" alt = "Anna Baker photo" >
+<img src = "097cd97.jpg" alt = "Anna Baker photo" width="150" height="100" >
 
 
 </div>
