--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@ Anna Baker
 
 <div id="header">
 <div id="name">
-<H1> 
+<H1> <img class = "right" src = "https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/8/005/067/0e7/097cd97.jpg" alt = "Anna Baker photo" width="200" height="225"> <div class="topright">Top Right</div>
 Anna Katherine Rodenborg Baker, MA  
 </H1>
 <H2>annakatherinebaker@gmail.com</H2>
 <H2>763.302.9886</H2>
-<img class = "right" src = "https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/8/005/067/0e7/097cd97.jpg" alt = "Anna Baker photo" width="200" height="225"> <div class="topright">Top Right</div>
+
 
 
 </div>
