--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Anna Baker
 </HEAD>
 <BODY>
 
-<div id="header">
+<header>
 <div id="name">
 <H1> <img src = "https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/8/005/067/0e7/097cd97.jpg" alt = "Anna Baker photo" width="120" height="150"> 
 Anna Katherine Rodenborg Baker, MA  
@@ -16,7 +16,7 @@ Anna Katherine Rodenborg Baker, MA
 
 
 
-</div>
+</header>
 </div>
 <div id="CareerProfile">
 <div class="transbox">
