--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ Anna Baker
 <BODY>
 
 <header>
-<div class = "name">
+<div id = "name">
 <H1> <img src = "https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/8/005/067/0e7/097cd97.jpg" alt = "Anna Baker photo" width="120" height="150"> 
 Anna Katherine Rodenborg Baker, MA  
 </H1>
