--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Anna Katherine Rodenborg Baker, MA
 <div id="body">
 <div id="Content">
 <P>Experience</P>
-<h4>Bilingual CA/MNsure Navigator, Planned Parenthood 2014-present</h4>
+<h4>Bilingual CA/MNsure Navigator, Planned Parenthood 2014-2016</h4>
 <UL>
 <LI>Coordinate MNsure enrollment at Minneapolis clinic</LI>
 <LI>Grew number of patients enrolled in healthcare by 15% in 2015 </LI>
