--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Anna Katherine Rodenborg Baker, MA
 
 </header>
 
-<div id="CareerProfile">
+<section>
 <div class="transbox">
 <P> 
   Career Profile: 
@@ -26,9 +26,8 @@ Anna Katherine Rodenborg Baker, MA
 <P1>resources they need to thrive now and in the future.  </P1>
 
 
-</div>
-<div id="body">
-<div id="Content">
+
+<main>
 <P>Experience</P>
 <h4>Bilingual CA/MNsure Navigator, Planned Parenthood 2014-2016</h4>
 <UL>
@@ -103,9 +102,9 @@ Anna Katherine Rodenborg Baker, MA
   <LI>Editor of quarterly newsletter, MNRPCV News.http://www.mnrpcv.org/newsletters/newsletters/</LI>
 </UL>
 
-</div>
-</div>
-</div>
+
+</main>
+</section>
 
 
 
