--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@ Anna Katherine Rodenborg Baker, MA
 <P4>Courses: Policy Advocacy, Theory and Practice of Sustainable Development, </P4>
 <P4>Economics, Training and Design for Experiential Learning, Training for Social Action,</P4> 
 <P4>Intercultural Communication, Leadership and Coalition Building</P4>
+<P4> Capstone Project: <a href = "http://digitalcollections.sit.edu/cgi/viewcontent.cgi?article=3598&context=capstones">"Changing the Status Quo of Waste Management: A Case Study of a Rural Costa Rican Town</a></P4>
 
 <H4>2008 B.A. International Relations, Augsburg College, Minneapolis MN</H4>
 <P4>Minors: Peace & Global Studies, Spanish</P4>
