--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ Anna Katherine Rodenborg Baker, MA
 <H4>2013-present</H4>
 <UL>
   <LI>Vice President (2014-present)</LI>
-  <LI>Editor of quarterly newsletter, MNRPCV News.http://www.mnrpcv.org/newsletters/newsletters/</LI>
+  <LI>Editor of quarterly newsletter, <a href = "http://www.mnrpcv.org/newsletters/newsletters/"> MNRPCV News</a></LI>
 </UL>
 </main>
 </section>
