--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@ Anna Katherine Rodenborg Baker, MA
   <LI>Editor of quarterly newsletter, <a href = "http://www.mnrpcv.org/newsletters/newsletters/"> MNRPCV News</a></LI>
 </UL>
 <form> 
-  <label for "Feedback"> Contact Anna </label>
-  <input type = "text" id = "feedback">
+  <label for = "Feedback"> Contact Anna </label>
+  <textarea id = "Feedback"> </textarea>
   <input type = "submit" value = "Click to submit"
 </form>
 </main>
