--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@ Anna Baker
 <H1> 
 Anna Katherine Rodenborg Baker, MA  
 </H1>
-<img src = "https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/8/005/067/0e7/097cd97.jpg" alt = "Anna Baker photo" width="210" height="225"> \\First change made, had trouble with the editing of the location of the file but pleased that it seems to link correctly.\\ 
+<img src = "https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/8/005/067/0e7/097cd97.jpg" alt = "Anna Baker photo" width="210" height="225"> <!--First change made, had trouble with the editing of the location of the file but pleased that it seems to link correctly.>
 <H2>annakatherinebaker@gmail.com</H2>
 <H2>763.302.9886</H2>
 
 </header>
 
-<section> \\added section instead of div class = Career Profile\\
-<div class="transbox">\\I tried to get rid of this, but I'm not sure what else could be used. \\
+<section> <!--added section instead of div class = Career Profile-->
+<div class="transbox"> <!--I tried to get rid of this, but I'm not sure what else could be used.-->
 <P> 
   Career Profile: 
   </P>
 <P1>Self-driven, goal-oriented professional dedicated to connecting communities with the </P1>
 <P1>resources they need to thrive now and in the future.  </P1>
 
-<main> \\added main instead of div class = content\\
+<main> <!--added main instead of div class = content>
 <P>Experience</P>
 <h4>Bilingual CA/MNsure Navigator, Planned Parenthood 2014-2016</h4>
 <UL>
@@ -76,7 +76,7 @@ Anna Katherine Rodenborg Baker, MA
 <P4>Courses: Policy Advocacy, Theory and Practice of Sustainable Development, </P4>
 <P4>Economics, Training and Design for Experiential Learning, Training for Social Action,</P4> 
 <P4>Intercultural Communication, Leadership and Coalition Building</P4>
-<nav> Capstone Project: <a href = "http://digitalcollections.sit.edu/cgi/viewcontent.cgi?article=3598&context=capstones">"Changing the Status Quo of Waste Management: A Case Study of a Rural Costa Rican Town</a></nav> \\added link to this file; used 'nav' tag to edit spacing in css but not sure if theres a more efficient way to do it \\ \\
+<nav> Capstone Project: <a href = "http://digitalcollections.sit.edu/cgi/viewcontent.cgi?article=3598&context=capstones">"Changing the Status Quo of Waste Management: A Case Study of a Rural Costa Rican Town</a></nav> <!--added link to this file; used 'nav' tag to edit spacing in css but not sure if theres a more efficient way to do it >
 
 <H4>2008 B.A. International Relations, Augsburg College, Minneapolis MN</H4>
 <P4>Minors: Peace & Global Studies, Spanish</P4>
@@ -98,7 +98,7 @@ Anna Katherine Rodenborg Baker, MA
 <H4>2013-present</H4>
 <UL>
   <LI>Vice President (2014-present)</LI>
-  <LI>Editor of quarterly newsletter, <a href = "http://www.mnrpcv.org/newsletters/newsletters/"> MNRPCV News</a></LI> \\added link here as well\\
+  <LI>Editor of quarterly newsletter, <a href = "http://www.mnrpcv.org/newsletters/newsletters/"> MNRPCV News</a></LI> <!--added link here as well>
 
 </UL>
 
