--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ Anna Katherine Rodenborg Baker, MA
   <LI>Editor of quarterly newsletter, <a href = "http://www.mnrpcv.org/newsletters/newsletters/"> MNRPCV News</a></LI>
 
 </UL>
-<form action="mail.php" method="POST">
+<form action="mail.php" method="GET">
 <p>Name</p> <input type="text" name="name">
 <p>Email</p> <input type="text" name="email">
 <p>Message</p><textarea name="message" rows="6" cols="25"></textarea><br />
