--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ Anna Katherine Rodenborg Baker, MA
 </header>
 
 <section> 
+<div class = "color">
 <div class="transbox"> 
 <P> 
   Career Profile: 
@@ -100,7 +101,7 @@ Anna Katherine Rodenborg Baker, MA
   <LI>Editor of quarterly newsletter, <a href = "http://www.mnrpcv.org/newsletters/newsletters/"> MNRPCV News</a></LI>
 
 </UL>
-
+</div>
 </main>
 </section>
 </BODY>
