--- a/index.html
+++ b/index.html
@@ -28,62 +28,71 @@ Anna Katherine Rodenborg Baker, MA
 
 <main> 
 <P>Experience</P>
+
 <h4>Bilingual CA/MNsure Navigator, Planned Parenthood 2014-2016</h4>
-<UL>
-<LI>Coordinated MNsure enrollment at Minneapolis clinic</LI>
-<LI>Grew number of patients enrolled in healthcare by 15% in 2015 </LI>
-<LI>Provided patient services in Spanish 
-<LI>Assisted in education and enrollment of clients</LI>
-<LI>Provided administrative services in clinic</LI>
-</UL>
+
+  <UL>
+    <LI>Coordinated MNsure enrollment at Minneapolis clinic</LI>
+    <LI>Grew number of patients enrolled in healthcare by 15% in 2015 </LI>
+    <LI>Provided patient services in Spanish 
+    <LI>Assisted in education and enrollment of clients</LI>
+    <LI>Provided administrative services in clinic</LI>
+  </UL>
+
 <H4>Interpreter, Multilingual Word 2014</H4>
-<UL>
-<LI>Provided interpretive services in Spanish/English in medical, academic and community service contexts</LI>
-<LI>Assisted in communicating about cultural differences</LI>
-<LI>Coordinated interpreters with client requests</LI></UL>
+  <UL>
+    <LI>Provided interpretive services in Spanish/English in medical, academic and community service contexts</LI>
+    <LI>Assisted in communicating about cultural differences</LI>
+    <LI>Coordinated interpreters with client requests</LI>
+  </UL>
+
 <H4>Peace Corps Volunteer Leader, US Peace Corps 2013 </H4>
-<UL>
-<LI>Supported and coordinated Rural Community Development program</LI>
-<LI>Reviewed and edited Peace Corps volunteers’ grant proposals</LI>
-<LI>Authored electronic weekly newsletter for volunteers and staff across Costa Rica</LI>
-<LI>Advised volunteers on environmentally focused projects</LI>
-<LI>Developed and led training for Peace Corps Costa Rica Diversity Committee</LI>
-<LI>Participated as team member to develop and implement multiple workshops on program design and management</LI>
-</UL>
+  <UL>
+    <LI>Supported and coordinated Rural Community Development program</LI>
+    <LI>Reviewed and edited Peace Corps volunteers’ grant proposals</LI>
+    <LI>Authored electronic weekly newsletter for volunteers and staff across Costa Rica</LI>
+    <LI>Advised volunteers on environmentally focused projects</LI>
+    <LI>Developed and led training for Peace Corps Costa Rica Diversity Committee</LI>
+    <LI>Participated as team member to develop and implement multiple workshops on program design and management</LI>
+  </UL>
+
 <H4>Rural Community Development Specialist, US Peace Corps 2010-2012</H4>
-<UL>
-<LI>Successfully organized community to initiate trash collection and recycling</LI>
-<LI>Led campaign to certify Rio Celeste in Costa Rica’s national eco-certification program, Bandera Azul</LI>
-<LI>Secured grant funding, developed and managed biogas digester project for local school and community households</LI>
-<LI>Prepared and hosted Technical Training Week for Peace Corps trainees</LI>
-</UL>
+  <UL>
+    <LI>Successfully organized community to initiate trash collection and recycling</LI>
+    <LI>Led campaign to certify Rio Celeste in Costa Rica’s national eco-certification program, Bandera Azul</LI>
+    <LI>Secured grant funding, developed and managed biogas digester project for local school and community households</LI>
+    <LI>Prepared and hosted Technical Training Week for Peace Corps trainees</LI>
+  </UL>
+
 <H4>Field Manager, Fund for the Public Interest 2008</H4>
-<UL>
-  <LI>Managed team of 10-12 field canvassers</LI>
-  <LI>Informed, advocated and raised funds for environmental initiatives</LI>
-  <LI>Met or exceeded all daily fund raising quotas</LI>
-  <LI>Coordinated and trained incoming employees in fundraising</LI>
-</UL>
-<H4>English as a Second Language (ESL) Teacher, World Teach China, Summer 2007</H4>
-<UL>
-  <LI>Developed curriculum, designed lesson plans and taught English to youth in Hunan Province, China</LI>
-  <LI>Managed a class of 30 – 40 middle school students</LI>
-  <LI>Engaged students by utilizing experiential learning techniques</LI>
-</UL>
+  <UL>
+    <LI>Managed team of 10-12 field canvassers</LI>
+    <LI>Informed, advocated and raised funds for environmental initiatives</LI>
+    <LI>Met or exceeded all daily fund raising quotas</LI>
+    <LI>Coordinated and trained incoming employees in fundraising</LI>
+  </UL>
+
+<H4>English as a Second Language (ESL) Teacher, World Teach China, Summer 2007</H4> 
+  <UL>
+    <LI>Developed curriculum, designed lesson plans and taught English to youth in Hunan Province, China</LI>
+    <LI>Managed a class of 30 – 40 middle school students</LI>
+    <LI>Engaged students by utilizing experiential learning techniques</LI>
+  </UL>
 
 <P>Education</P>
+
 <H4>2012 M.A. Sustainable Development, School for International Training, Brattleboro, VT</H4>
-<Brattleboro, VT. Concentrations: Community Development and Social Action
-<P4>Courses: Policy Advocacy, Theory and Practice of Sustainable Development, </P4>
-<P4>Economics, Training and Design for Experiential Learning, Training for Social Action,</P4> 
-<P4>Intercultural Communication, Leadership and Coalition Building</P4>
+<H4> Concentrations: Community Development and Social Action </H4>
+<P4> Courses: Policy Advocacy, Theory and Practice of Sustainable Development, </P4>
+<P4> Economics, Training and Design for Experiential Learning, Training for Social Action,</P4> 
+<P4> Intercultural Communication, Leadership and Coalition Building </P4>
 <nav> Capstone Project: <a href = "http://digitalcollections.sit.edu/cgi/viewcontent.cgi?article=3598&context=capstones">"Changing the Status Quo of Waste Management: A Case Study of a Rural Costa Rican Town</a></nav> 
-<H4>2008 B.A. International Relations, Augsburg College, Minneapolis MN</H4>
-<P4>Minors: Peace & Global Studies, Spanish</P4>
+<H4> 2008 B.A. International Relations, Augsburg College, Minneapolis MN </H4>
+<P4> Minors: Peace & Global Studies, Spanish </P4>
 
 
 <P>International Education</P>
-<H3>The courses below were taken through the Augsburg College Center for Global Education</H3>
+<H4>The courses below were taken through the Augsburg College Center for Global Education</H4>
 <UL>
   <LI>Social Justice, Gender and the Environment in Latin America. Semester Abroad in Mexico and Guatemala. Spring 2007</LI>
   <LI>Sustainable Development in Central America. Semester Abroad in Guatemala, El Salvador, Honduras and Nicaragua. Fall 2005</LI>
@@ -91,11 +100,11 @@ Anna Katherine Rodenborg Baker, MA
 </UL>
 
 <P>Other Service</P>
-<H4>Education Committee Member, MN International NGO Network, Mpls, MN June 2013-present</H4>
-<P4>Speakers Committee Lead for the 2014 International Development Exchange and Action Summit, October, 2014.</P4>
+  <H4>Education Committee Member, MN International NGO Network, Mpls, MN June 2013-present</H4>
+    <P4>Speakers Committee Lead for the 2014 International Development Exchange and Action Summit, October, 2014.</P4>
 
-<H4>Board Member and Vice President, MN Returned Peace Corps Volunteers, Mpls, MN </H4>
-<H4>2013-present</H4>
+  <H4>Board Member and Vice President, MN Returned Peace Corps Volunteers, Mpls, MN </H4>
+  <H4>2013-present</H4>
 <UL>
   <LI>Vice President (2014-present)</LI>
   <LI>Editor of quarterly newsletter, <a href = "http://www.mnrpcv.org/newsletters/newsletters/"> MNRPCV News</a></LI>
