--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Anna Katherine Rodenborg Baker, MA
 </header>
 
 <section> 
-
+<div class="transition">
 <div class="transbox"> 
 <P> 
   Career Profile: 
@@ -110,7 +110,7 @@ Anna Katherine Rodenborg Baker, MA
   <LI>Editor of quarterly newsletter, <a href = "http://www.mnrpcv.org/newsletters/newsletters/"> MNRPCV News</a></LI>
 
 </UL>
-
+</div>
 </main>
 </section>
 </BODY>
