--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Anna Baker
 <H1> 
 Anna Katherine Rodenborg Baker, MA  
 </H1>
-<img src = "https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/8/005/067/0e7/097cd97.jpg" alt = "Anna Baker photo" width="210" height="225"> 
+<img src = "https://www.facebook.com/photo.php?fbid=853745066608&set=a.533474316758.2036479.72700372&type=3&theater" alt = "Anna Baker photo" width="210" height="225"> 
 <H2>annakatherinebaker@gmail.com</H2>
 <H2>763.302.9886</H2>
 
@@ -23,8 +23,8 @@ Anna Katherine Rodenborg Baker, MA
 <P> 
   Career Profile: 
   </P>
-<P1>Self-driven, goal-oriented professional dedicated to connecting communities with the </P1>
-<P1>resources they need to thrive now and in the future.  </P1>
+<P1>Mover and shaker, world traveler, all around badass. </P1>
+
 
 <main> 
 <P>Experience</P>
