--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Anna Baker
 <H1> 
 Anna Katherine Rodenborg Baker, MA  
 </H1>
-<img src = "selfie 7.jpg" alt = "Anna Baker photo" width="210" height="225"> 
+<img src = "#photos_snowlift > div._n9 > div > div.fbPhotoSnowliftContainer.uiContextualLayerParent > div.clearfix.fbPhotoSnowliftPopup > div.stageWrapper.lfloat._ohe > div.stage > img" alt = "Anna Baker photo" width="210" height="225"> 
 <H2>annakatherinebaker@gmail.com</H2>
 <H2>763.302.9886</H2>
 
