--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Anna Baker
 <H1> 
 Anna Katherine Rodenborg Baker, MA  
 </H1>
-<img src = "https://www.facebook.com/photo.php?fbid=853745066608&set=a.533474316758.2036479.72700372&type=3&theater" alt = "Anna Baker photo" width="210" height="225"> 
+<img src = "https://scontent-ord1-1.xx.fbcdn.net/v/t1.0-9/13151683_853745066608_9151236486893344692_n.jpg?oh=a1ba6348eb30c877e162b95f65ed5ccb&oe=57D37620" alt = "Anna Baker photo" width="210" height="225"> 
 <H2>annakatherinebaker@gmail.com</H2>
 <H2>763.302.9886</H2>
 
