--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@ Anna Katherine Rodenborg Baker, MA
 
 
 <main> 
+<div id="container">
+<div id="content">Content here
+  
+
 <P>Experience</P>
 
 <h4>Bilingual CA/MNsure Navigator, Planned Parenthood 2014-2016</h4>
@@ -78,7 +82,8 @@ Anna Katherine Rodenborg Baker, MA
     <LI>Managed a class of 30 – 40 middle school students</LI>
     <LI>Engaged students by utilizing experiential learning techniques</LI>
   </UL>
-
+  </div>
+<div id="navbar">Navigation</div>
 <P>Education</P>
 
 <H4>2012 M.A. Sustainable Development, School for International Training, Brattleboro, VT</H4>
@@ -113,5 +118,6 @@ Anna Katherine Rodenborg Baker, MA
 </div>
 </main>
 </section>
+</div>
 </BODY>
 </HTML>
