--- a/index.html
+++ b/index.html
@@ -28,11 +28,8 @@ Anna Katherine Rodenborg Baker, MA
 
 <main> 
 <div id="container">
-<div id="content">Content here
-  
-
+<div id="content">
 <P>Experience</P>
-
 <h4>Bilingual CA/MNsure Navigator, Planned Parenthood 2014-2016</h4>
 
   <UL>
@@ -83,7 +80,7 @@ Anna Katherine Rodenborg Baker, MA
     <LI>Engaged students by utilizing experiential learning techniques</LI>
   </UL>
   </div>
-<div id="navbar">Navigation</div>
+<div id="navbar">
 <P>Education</P>
 
 <H4>2012 M.A. Sustainable Development, School for International Training, Brattleboro, VT</H4>
