--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@ Anna Katherine Rodenborg Baker, MA
   Career Profile: 
   </P>
 <P1>Mover and shaker, world traveler, all around badass. </P1>
-
-
 <main> 
-<div id="container">
-<div id="content">
+<div id="container"> \\DIV 1\\
+<div id="content"> \\div 2\\
+
 <P>Experience</P>
 <h4>Bilingual CA/MNsure Navigator, Planned Parenthood 2014-2016</h4>
 
@@ -79,8 +78,10 @@ Anna Katherine Rodenborg Baker, MA
     <LI>Managed a class of 30 – 40 middle school students</LI>
     <LI>Engaged students by utilizing experiential learning techniques</LI>
   </UL>
-  </div>
-<div id="navbar">
+  </div> \\end of div 2\\
+  
+<div id="navbar"> \\div 3\\
+
 <P>Education</P>
 
 <H4>2012 M.A. Sustainable Development, School for International Training, Brattleboro, VT</H4>
@@ -112,9 +113,9 @@ Anna Katherine Rodenborg Baker, MA
   <LI>Editor of quarterly newsletter, <a href = "http://www.mnrpcv.org/newsletters/newsletters/"> MNRPCV News</a></LI>
 
 </UL>
-</div>
+</div> \\end of div 3\\
 </main>
 </section>
-</div>
+</div> \\end of div 1\\
 </BODY>
 </HTML>
