--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@ Anna Katherine Rodenborg Baker, MA
   </P>
 <P1>Mover and shaker, world traveler, all around badass. </P1>
 <main> 
-<div id="container"> \\DIV 1\\
-<div id="content"> \\div 2\\
+<div id="container"> !\\DIV 1\\
+<div id="content"> !\\div 2\\
+<div id="innercontent">
+  
 
 <P>Experience</P>
 <h4>Bilingual CA/MNsure Navigator, Planned Parenthood 2014-2016</h4>
@@ -78,9 +80,11 @@ Anna Katherine Rodenborg Baker, MA
     <LI>Managed a class of 30 – 40 middle school students</LI>
     <LI>Engaged students by utilizing experiential learning techniques</LI>
   </UL>
-  </div> \\end of div 2\\
+  </div>
+  </div> 
   
-<div id="navbar"> \\div 3\\
+<div id="navbar"> 
+<div id="innernavbar">
 
 <P>Education</P>
 
@@ -113,9 +117,10 @@ Anna Katherine Rodenborg Baker, MA
   <LI>Editor of quarterly newsletter, <a href = "http://www.mnrpcv.org/newsletters/newsletters/"> MNRPCV News</a></LI>
 
 </UL>
-</div> \\end of div 3\\
+</div> 
+</div>
 </main>
 </section>
-</div> \\end of div 1\\
+</div> 
 </BODY>
 </HTML>
