--- a/index.html
+++ b/index.html
@@ -25,11 +25,7 @@ Anna Katherine Rodenborg Baker, MA
   </P>
 <P1>Mover and shaker, world traveler, all around badass. </P1>
 <main> 
-<div id="container"> !\\DIV 1\\
-<div id="content"> !\\div 2\\
-<div id="innercontent">
-  
-
+<div id="experiencecolumn">
 <P>Experience</P>
 <h4>Bilingual CA/MNsure Navigator, Planned Parenthood 2014-2016</h4>
 
@@ -81,11 +77,7 @@ Anna Katherine Rodenborg Baker, MA
     <LI>Engaged students by utilizing experiential learning techniques</LI>
   </UL>
   </div>
-  </div> 
-  
-<div id="navbar"> 
-<div id="innernavbar">
-
+<div id="other"> 
 <P>Education</P>
 
 <H4>2012 M.A. Sustainable Development, School for International Training, Brattleboro, VT</H4>
@@ -115,12 +107,11 @@ Anna Katherine Rodenborg Baker, MA
 <UL>
   <LI>Vice President (2014-present)</LI>
   <LI>Editor of quarterly newsletter, <a href = "http://www.mnrpcv.org/newsletters/newsletters/"> MNRPCV News</a></LI>
-
 </UL>
 </div> 
-</div>
+
 </main>
 </section>
-</div> 
+ 
 </BODY>
 </HTML>
