--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Anna Katherine Rodenborg Baker, MA
   </P>
 <P1>Mover and shaker, world traveler, all around badass. </P1>
 <main> 
-<div id="experiencecolumn">
+<div id="nav">
 <P>Experience</P>
 <h4>Bilingual CA/MNsure Navigator, Planned Parenthood 2014-2016</h4>
 
@@ -77,7 +77,7 @@ Anna Katherine Rodenborg Baker, MA
     <LI>Engaged students by utilizing experiential learning techniques</LI>
   </UL>
   </div>
-<div id="other"> 
+<div id="section"> 
 <P>Education</P>
 
 <H4>2012 M.A. Sustainable Development, School for International Training, Brattleboro, VT</H4>
