--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@ Anna Baker
 </HEAD>
 <BODY>
 <header>
+<script>
+$(document).ready(function(){
+    $("#hide").click(function(){
+        $("p").hide();
+    });
+    $("#show").click(function(){
+        $("p").show();
+    });
+});
+<button id="hide">Hide</button>
+<button id="show">Show</button>
 <H1> 
 Anna Katherine Rodenborg Baker, MA  
 </H1>
