--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <HTML>
-<HEAD>  <link rel="stylesheet" type="text/css" href="style.css"> 
+<HEAD>  
+<link rel="stylesheet" type="text/css" href="style.css"> 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+<script>
+$(document).ready(function(){
+    $("#hide").click(function(){
+        $("p").hide();
+    });
+    $("#show").click(function(){
+        $("p").show();
+    });
+});
+</script>
 <TITLE>
 Anna Baker
 </TITLE>
