--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <script>
 $(document).ready(function(){
     $("#hide").click(function(){
-        $("p","H1", "H2", "H3","H4").hide();
+        $("body").hide();
     });
     $("#show").click(function(){
-        $("p","H1", "H2", "H3","H4").show();
+        $("body").show();
     });
 });
 </script>
