--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <script>
 $(document).ready(function(){
     $("#hide").click(function(){
-        $("body").hide();
+        $("BODY").hide();
     });
     $("#show").click(function(){
-        $("body").show();
+        $("BODY").show();
     });
 });
 </script>
