--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ Anna Katherine Rodenborg Baker, MA
   <LI>Vice President (2014-present)</LI>
   <LI>Editor of quarterly newsletter, <a href = "http://www.mnrpcv.org/newsletters/newsletters/"> MNRPCV News</a></LI>
 </UL>
-<div class="show"
+<div class="show">
 <button id="show">Show</button>
 </div>
 </main>
