--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script>
 $(document).ready(function(){
     $("#hide").click(function(){
-        $("BODY"not(.show)).hide();
+        $("BODY:not(.show)").hide();
     });
     $("#show").click(function(){
         $("BODY").show();
