--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <script>
 $(document).ready(function(){
     $("#hide").click(function(){
-        $("BODY:not(.show)").hide();
+        $("peeka").hide();
     });
     $("#show").click(function(){
-        $("BODY").show();
+        $("boo").show();
     });
 });
 </script>
@@ -17,6 +17,7 @@ Anna Baker
 </TITLE>
 </HEAD>
 <BODY>
+    <div class="peeka">
 <header>
 
 <button id="hide">Hide</button>
@@ -119,7 +120,8 @@ Anna Katherine Rodenborg Baker, MA
   <LI>Vice President (2014-present)</LI>
   <LI>Editor of quarterly newsletter, <a href = "http://www.mnrpcv.org/newsletters/newsletters/"> MNRPCV News</a></LI>
 </UL>
-<div class="show">
+</div>
+<div class="boo">
 <button id="show">Show</button>
 </div>
 </main>
