--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <script>
 $(document).ready(function(){
     $("#hide").click(function(){
-        $("peeka").hide();
+        $("main").hide();
     });
     $("#show").click(function(){
-        $("boo").show();
+        $("main").show();
     });
 });
 </script>
