--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <script>
 $(document).ready(function(){
     $("#hide").click(function(){
-        $("main").hide();
+        $("section").hide();
     });
     $("#show").click(function(){
-        $("main").show();
+        $("section").show();
     });
 });
 </script>
@@ -21,7 +21,7 @@ Anna Baker
 <header>
 
 <button id="hide">Hide</button>
-
+<section>
 <H1> 
 Anna Katherine Rodenborg Baker, MA  
 </H1>
@@ -29,17 +29,13 @@ Anna Katherine Rodenborg Baker, MA
 <H2>annakatherinebaker@gmail.com</H2>
 <H2>763.302.9886</H2>
 </header>
-<main> 
 <P> 
   Career Profile: 
   </P>
 <P1>Mover and shaker, world traveler, all around badass. </P1>
-
-
-
+<main>
 <P>Experience</P>
 <h4>Bilingual CA/MNsure Navigator, Planned Parenthood 2014-2016</h4>
-
   <UL>
     <LI>Coordinated MNsure enrollment at Minneapolis clinic</LI>
     <LI>Grew number of patients enrolled in healthcare by 15% in 2015 </LI>
