--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script>
 $(document).ready(function(){
     $("#hide").click(function(){
-        $("body:not(.boo)").hide();
+        $("body:not(#boo)").hide();
     });
     $("#show").click(function(){
         $("section").show();
