--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ Anna Katherine Rodenborg Baker, MA
   <LI>Editor of quarterly newsletter, <a href = "http://www.mnrpcv.org/newsletters/newsletters/"> MNRPCV News</a></LI>
 </UL>
 </div>
-<div class="boo">
+<div class="#boo">
 <button id="show">Show</button>
 </div>
 </main>
